# churn-mlops

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  dvc.yaml  locustfile.py  prometheus.yml  pyproject.toml  requirements-api.in  requirements-api.txt  requirements.in  requirements.txt
.dvc/: config
.github/workflows/: ci.yml
data/raw/: test_mini.csv  train_mini.csv
models/: .gitignore  churn_model.txt.dvc
scripts/: detect_drift.py  validate_data.py
src/churn_mlops/api/: app.py  schemas.py
src/churn_mlops/data/: loader.py  schema.py
src/churn_mlops/models/: predict.py  train.py
src/churn_mlops/pipeline/: flow.py
terraform/: .gitignore  main.tf
tests/: conftest.py  test_api.py
