# ============================================================
# PROJECT METADATA
# ============================================================
[project]
name = "churn-mlops"
version = "0.1.0"
description = "End-to-end MLOps pipeline for telecom churn prediction"
authors = [{ name = "Malav Joshi", email = "malavmjoshi@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11,<3.12"

# ============================================================
# RUFF — Linter & Formatter
# Catches bugs, code smells, unused imports, style issues
# ============================================================
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (unused imports, undefined names)
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear (likely bugs)
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade (modernize syntax)
    "N",   # pep8-naming (variable/class naming)
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line-too-long handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802"]  # allow non-PEP8 names in tests

# ============================================================
# BLACK — Code Formatter
# ============================================================
[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

# ============================================================
# MYPY — Static Type Checker
# ============================================================
[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["mlflow.*", "lightgbm.*", "imblearn.*"]
ignore_missing_imports = true

# ============================================================
# PYTEST — Test Runner
# ============================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
]

# ============================================================
# COVERAGE — Test coverage rules
# ============================================================
[tool.coverage.run]
source = ["src"]
omit = ["tests/*", ".venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
